# agtk

./: .gitignore  README.md  pyproject.toml
agtk/: logging.py
agtk/cli/: convert_masks.py  convert_numpy.py  convert_series.py  extract_slices.py  parse.py  view.py
agtk/dataset/: __init__.py
mltools/: __init__.py  config.py  convert.py  convert_masks.py  convert_series.py
mltools/cli/: convert_masks.py  convert_series.py  view.py
