[tool.poetry]
name = "mltools"
version = "0.1.0"
description = ""
authors = ["korus <ruslan.kosarev@gmail.com>"]

[tool.poetry.scripts]
"view" = "mltools.cli.view:view"
"convert_masks" = "mltools.cli.convert_masks:convert_masks"
"convert_series" = "mltools.cli.convert_masks:convert_series"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.62.3"
click = "^8.0.1"
pydicom = "^2.2.1"
SimpleITK = "^2.1.1"
numpy = "1.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
