[tool.poetry]
name = "agtk"
version = "0.1.0"
description = ""
authors = ["korus <ruslan.kosarev@gmail.com>"]

[tool.poetry.scripts]
"view" = "agtk.cli.view:view"
"convert_masks" = "agtk.cli.convert_masks:convert_masks"
"convert_series" = "agtk.cli.convert_series:convert_series"
"convert_numpy" = "agtk.cli.convert_numpy:convert_numpy"

[tool.poetry.dependencies]
python = "^3.6"
tqdm = "^4.62.3"
click = "^8.0.1"
pydicom = "^2.2.1"
SimpleITK = "^2.1.1"
numpy = "1.19.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
